Fixed up syntax for readability

--- a/style.css
+++ b/style.css
@@ -45,11 +45,13 @@ form{
 }
 
 #output{
+  width: 100%;
+  padding: 50px;
+}
+.personal{
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
-  padding: 50px;
 }
 
 #name{
